fix gaps

--- a/foundations/3-flexbox/flex/03-flex-header-2/style.css
+++ b/foundations/3-flexbox/flex/03-flex-header-2/style.css
@@ -55,19 +55,19 @@ ul {
 
 .links {
 	display: flex;
-	gap: 10px;
+	gap: 8px;
 }
 
 .left {
 	display: flex;
 	justify-content: left;
 	align-items: center;
-	gap: 10px;
+	gap: 16px;
 }
 
 .right {
 	display: flex;
 	justify-content: right;
 	align-items: center;
-	gap: 10px;
+	gap: 16px;
 }
